--- a/css/style.css
+++ b/css/style.css
@@ -12,17 +12,23 @@ body {
 
 header {
     position: fixed;
+    top: 0;
     z-index: 1;
 	overflow: hidden;
 	width: 100%;
 	height: 56px !important;
-    margin: 0px;
-	padding: 0px;
-    
+    margin: 0;
+	padding: 0;
+    border: 0;
+    box-shadow: 0px 0px 8px #000000;
 }
 
-a:link {
+a {
 	text-decoration: none;
+}
+
+a:hover {
+    color:blue;
 }
 
 .toolbar {
@@ -38,31 +44,27 @@ a:link {
     height: inherit;
 }
 
-.toolbar-left a {
-    background-color: red;
-    vertical-align: bottom;
-}
-
-.toolbar-middle {
-    float: left;
-    width: 10%;
-    height: inherit;
-}
-
 .toolbar-right {
     float: right;
     width: 45%;
     height: inherit;
 }
 
+.main-menu {
+    float: left;
+    margin: 17.5px;
+    color: #90e0E0;
+    height: inherit;
+}
+
+.main-menu:hover {
+    color:white;
+}
+
 .main-div {
-    position:relative;
+    position: relative;
+    top: 56px;
 }
-
-.toolbar-left a{
-    vertical-align: baseline;
-}
-
 
 #add-button {
     position: fixed;
@@ -70,7 +72,10 @@ a:link {
     left: 47.5%;
 }
 
-
+#summary{
+    color: aliceblue;
+    
+}
 
 
 /*COLORS*/
@@ -80,6 +85,6 @@ a:link {
 .text-primary-color    	{ color: #FFFFFF; }
 .accent-color          	{ background: #FF4081; }
 .primary-text-color    	{ color: #212121; }
-.secondary-text-color  	{ color: #757575; }
+.secondary-text-color  	{ color: #90e0E0; }
 .divider-color         	{ border-color: #BDBDBD; }
 .default-secondary-color{ color: #ED4783; }
