--- a/css/style.css
+++ b/css/style.css
@@ -11,23 +11,23 @@ body {
 }
 
 header {
-    position: fixed;
-    top: 0;
-    z-index: 1;
+	position: fixed;
+	top: 0;
+	z-index: 1;
 	overflow: hidden;
 	width: 100%;
 	height: 56px;
-    margin: 0;
+	margin: 0;
 	padding: 0;
-    border: 0;
-    box-shadow: 0px 0px 8px #000000;
+	border: 0;
+	box-shadow: 0px 0px 8px #000000;
 }
 
 .main-div {
-    position: absolute; /*default*/
-    top: 56px;
-    left: 0px;
-    margin: 0;
+    position: static; /*default*/
+    /*top: 56px;
+    left: 0px;*/
+    margin: 56px 0px 0px 0px;
     padding: 2%;
     
 }
@@ -44,7 +44,7 @@ a:hover {
 	width: 100%;
 	height: inherit;
 	/*background-color:none;*/
-
+	
 }
 
 .toolbar-left {
@@ -75,7 +75,6 @@ a:hover {
 }
 
 .toolbar-right i {
-    position: static;
     float: right;
     display: inline-block;
     font-size: 24px;
@@ -84,7 +83,6 @@ a:hover {
 }
 
 .toolbar-right input {
-    position: static;
     float: right;
     background-color: aliceblue;
     width: 25%;
@@ -98,22 +96,25 @@ a:hover {
 
 .today-meal-title {
     font-size: 24px;
-    padding-top: 10px;
-    padding-bottom: 15px;
-    
+    padding: 5px;
 }
 
 .today-meal-content {
     display: flex;
-    flex-wrap: wrap;
-    
+	flex-flow: row wrap;
+	padding: 10px 0px 30px 0px;
 }
 
-.today-meal-content div img {
-    margin: 2px;;
+.today-meal-content div {
+    width: 200px;
+	height: 300px;
+    margin: 2px;
     border: none;
     border-radius: 20px;
-    
+	background-repeat: no-repeat;
+ 	/*background-image: url("../random-image.jpg");*/
+	background-image: url("https://source.unsplash.com/random/300x400");
+	
 }
 
 #summary {
@@ -155,11 +156,9 @@ a:hover {
     position: fixed;
     top: 1rem;
     left: 47%;
+	
     
 }
-
-
-
 
 /*COLORS*/
 .dark-primary-color    	{ background: #006064; }
