--- a/data.css
+++ b/data.css
@@ -1,3 +1,14 @@
 #data {
 	color: aliceblue;
 }
+
+.today-meal-header {
+    font-size: 24px;
+    padding: 10px 0px 5px 10px;
+}
+
+.today-meal-content {
+    display: flex;
+	flex-flow: row wrap;
+	padding: 10px 0px 30px 0px;
+}
