--- a/index.css
+++ b/index.css
@@ -12,3 +12,15 @@
 	flex-flow: row wrap;
 	padding: 10px 0px 30px 0px;
 }
+
+.today-meal-content div {
+    width: 200px;
+	height: 300px;
+    margin: 2px;
+    border: none;
+    border-radius: 20px;
+	background-repeat: no-repeat;
+ 	/*background-image: url("../random-image.jpg");*/
+	background-image: url("https://source.unsplash.com/random/300x400");
+	
+}
