--- a/css/style.css
+++ b/css/style.css
@@ -13,20 +13,22 @@ body {
 header {
 	position: fixed;
 	top: 0;
+	left: 0;
 	z-index: 1;
 	overflow: visible;
 	width: 100%;
-	height: 56px;
+	/*height: 56px;*/
 	margin: 0;
 	padding: 0;
 	border: 0;
 	background-color: #0097A7;
-	/*background: linear-gradient(to bottom right, #4DD0E1,#006064);*/
 	box-shadow: 0px 0px 4px #000000;
 }
 
 footer {
+	/* HOW TO MAKE IT POSITION LIKE THE HEADER RELATIVE TO THE END OF THE CONTENT */
 	background-color: #0097A7;
+	width: 100%;
 }
 
 footer nav {
@@ -40,7 +42,8 @@ footer nav a {
 }
 
 .main-div {
-    position: static; /*default*/
+    position: absolute; /*default*/
+	/* Debajo del header */
     margin: 56px 0px 0px 0px;
     padding: 2%;
     
@@ -62,9 +65,11 @@ a:hover {
 }
 
 .toolbar-left {
+	/* With float: left it doesn't take all the space of the line */
 	float: left;
     width: 40%;
-    margin: 18.5px 12px;
+    /*margin: 19px 12px;*/
+	padding-left: 12px;
 }
 
 /* The main menu elements */
@@ -73,7 +78,7 @@ a:hover {
 	float: left;
     display: inline-block;
 	margin: 0px;
-    padding: 0px 12px;
+    padding: 18px 12px;
     color: #90e0E0;
     
 }
@@ -113,11 +118,43 @@ a:hover {
 }
 
 #add-button {
-    position: fixed;
-    top: 1rem;
+    position: absolute;
+	/* Que sobresalga por debajo del header */
+    bottom: -1rem;
     left: 47%;
 	
 }
+
+
+/* RESPONSIVE */
+
+@media screen and (max-width: 1000px) {
+	header {
+		/*bottom: 0;*/
+		/*background: linear-gradient(to bottom right, #4DD0E1,#006064);*/
+	}
+	
+}
+@media screen and (max-width: 650px) {
+	header {
+		bottom: 0;
+		top: auto;
+	}
+	
+	#add-button {
+    	top: -1rem;
+		
+	}
+}
+
+
+
+
+
+
+
+
+
 
 /*COLORS*/
 .dark-primary-color    	{ background: #006064; }
