--- a/css/style.css
+++ b/css/style.css
@@ -128,14 +128,14 @@ a:hover {
 
 /* RESPONSIVE */
 
-@media screen and (max-width: 1000px) {
+@media only screen and (max-width: 1000px) {
 	header {
 		/*bottom: 0;*/
 		/*background: linear-gradient(to bottom right, #4DD0E1,#006064);*/
 	}
 	
 }
-@media screen and (max-width: 650px) {
+@media only screen and (max-width: 15cm) {
 	header {
 		bottom: 0;
 		top: auto;
